--- a/My first Website/index.html
+++ b/My first Website/index.html
@@ -6,7 +6,27 @@
     <title>Bayleaf Indian Cuisine</title>
 </head>
 <body>
+
     
+    <!-- Header section start -->
+<header class="header">
+    <nav class="navbar">
+        <a href="">Logo</a>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Menu</a></li>
+            <li><a href="">Reservation</a></li>
+            <li><a href="">Online Order</a></li>
+            <li><a href="">Contact Us</a></li>
+        </ul>
+        <button></button>
+    </nav>
+</header>
+
+
+     <!-- Header section end -->
+
+
     <img src="BN-1.JPG" alt="">
     <h1>Menu </h1>
     <h1>Online Order </h1> 
@@ -14,5 +34,6 @@
     <h1>Contact</h1>
     <img src="new cover.JPG" alt="">
     <p>Indulge in our flavorful dishes that will satisfy your cravings.</p>
+
 </body>
 </html>
