--- a/My first Website/index.html
+++ b/My first Website/index.html
@@ -11,20 +11,67 @@
     <!-- Header section start -->
 <header class="header">
     <nav class="navbar">
-        <a href="">Logo</a>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Menu</a></li>
+        <a href=""class="logo">Logo</a>
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#Menu">Menu</a></li>
             <li><a href="">Reservation</a></li>
             <li><a href="">Online Order</a></li>
             <li><a href="">Contact Us</a></li>
         </ul>
-        <button></button>
+        <button class="menu-toggle">≡</button>
     </nav>
 </header>
 
 
      <!-- Header section end -->
+
+     <!-- Hero section start -->
+<section id="home"class="hero">
+    <div class="hero-content">
+        <h1>Welcome to Bayleaf Indian Cuisine</h1>
+        <p>Indulge in our flavorful dishes that will satisfy your cravings.</p>
+        <a href="">Learn More</a>
+    </div>
+</section>
+
+<!-- Hero section end -->
+
+<!-- Features section start -->
+<section id="features"  class="features">
+    <h2>Features</h2>
+    <div class="feature-grid">
+        <div class="feature-item">
+            <h3>Responsive design</h3>
+            <p>Your website looks great on any device.</p>
+        </div>
+        <div class="feature-item">
+            <h3>Modern UI</h3>
+            <p>clean, simple, and visually appealing layouts</p>
+        </div>
+        <div class="feature-item">
+            <h3>Customizable</h3>
+            <p>Adjust  every aspect to match your brand</p>
+        </div>
+    </div>
+</section>
+
+ <!-- Features section end -->
+
+<!-- Contact section start-->
+ <section>
+    <h2>contact-us</h2>
+    <form action="">
+        <div>
+            <label for="">
+                <input type="text" name="" id="">
+            </label>
+        </div>
+    </form>
+ </section>
+ <!-- Contact section end-->
+
+
 
 
     <img src="BN-1.JPG" alt="">
