--- a/My first Website/index.html
+++ b/My first Website/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bayleaf Indian Cuisine</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -38,18 +39,18 @@
 <!-- Hero section end -->
 
 <!-- Features section start -->
-<section id="features"  class="features">
+<section id="Menu"  class="Menu">
     <h2>Features</h2>
-    <div class="feature-grid">
-        <div class="feature-item">
+    <div class="menu-grid">
+        <div class="menu-item">
             <h3>Responsive design</h3>
             <p>Your website looks great on any device.</p>
         </div>
-        <div class="feature-item">
+        <div class="menu-item">
             <h3>Modern UI</h3>
             <p>clean, simple, and visually appealing layouts</p>
         </div>
-        <div class="feature-item">
+        <div class="menu-item">
             <h3>Customizable</h3>
             <p>Adjust  every aspect to match your brand</p>
         </div>
@@ -60,16 +61,37 @@
 
 <!-- Contact section start-->
  <section>
-    <h2>contact-us</h2>
-    <form action="">
-        <div>
-            <label for="">
-                <input type="text" name="" id="">
-            </label>
+    <h2>Contact-us</h2>
+    <form id="contactForm">
+        <div class="form-group">
+            <label for="">Name</label>
+                <input type="text" name="" id="name" placeholder="Your Name" required>
         </div>
+        <div class="form-group">
+            <label for="">Email</label>
+                <input type="email" name="" id="email" placeholder="Your Email" required>
+        </div>
+        <div class="form-group">
+            <label for="">Message</label>
+                <textarea name="" id="message" placeholder="Your Message" rows="5" required></textarea>
+        </div>
+        <button type="submit" class="btn">Send Message</button>
     </form>
  </section>
  <!-- Contact section end-->
+ <!-- footer section start-->
+  <footer class="footer">
+    <div class="footer-container">
+        <p>&copy; 2025 Bayleaf. All rights reserved.</p>
+        <div class="social-icons">
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+          
+        </div>
+    </div>
+  </footer>
+<!-- footer section end-->
 
 
 
